# infra

./: .gitignore  2026-03-27.md  Obsidian.md  README.md  Run code.md  justfile
.obsidian/: appearance.json  community-plugins.json  graph.json  workspace.json
Claude code/: Engram.md  GGA — Gentleman Guardian Angel.md  Mejoras.md  SDD — Spec-Driven Development.md
ClaudeCode/: Dead Code Skill — Ejemplo.md  GGA — Gentleman Guardian Angel.md  IA — Fases y Evolución.md  Introducción.md  settings.json.md
Excalidraw/: Arquitectura.excalidraw.md
Presentacion/: Just Ejemplos.md  Just Presentacion.md  Obsidian.md  Plugins.md
challenges/: README.md  challenges.md  tutorial.md
cloud-sweep/: justfile
platform/: .gitignore  Cargo.toml  justfile
platform/config/: functions.yaml  routes.yaml  schedules.yaml  workflows.yaml
platform/config/workflows/: hello-workflow.json
platform/docs/: architecture.md  deploy.md  improvements.md
platform/functions/health-api/: Cargo.toml
platform/functions/health-api/src/: main.rs
platform/functions/hello-api/: Cargo.toml
platform/functions/hello-api/src/: main.rs
platform/functions/hello-scheduled/: Cargo.toml
platform/functions/hello-scheduled/src/: main.rs
platform/libs/adapters-aws/: Cargo.toml
platform/libs/adapters-aws/src/: eventbridge.rs  lib.rs
platform/libs/app-http/: Cargo.toml
platform/libs/app-http/src/: lib.rs
platform/libs/domain/: Cargo.toml
platform/libs/domain/src/: lib.rs  models.rs
platform/libs/ports/: Cargo.toml
platform/libs/ports/src/: events.rs  storage.rs
platform/libs/shared/: Cargo.toml
platform/libs/shared/src/: lib.rs
platform/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
platform/terraform/modules/api/: main.tf  outputs.tf  variables.tf
platform/terraform/modules/compute/: main.tf  outputs.tf  variables.tf
platform/terraform/modules/events/: main.tf  outputs.tf  variables.tf
platform/terraform/modules/workflow/: main.tf  outputs.tf  variables.tf
(+3859 files in other folders)
