[package]
name = "hello-scheduled"
version = "0.1.0"
edition = "2021"

[features]
default = ["lambda"]
lambda = ["dep:lambda_runtime", "dep:aws_lambda_events"]

[dependencies]
anyhow = { workspace = true }
domain = { workspace = true }
shared = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
lambda_runtime = { workspace = true, optional = true }
aws_lambda_events = { workspace = true, optional = true }
